<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_info"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_attendance_in"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_button"
            android:layout_margin="16dp"
            android:text="@string/in_attendance"/>

        <Button
            android:id="@+id/btn_attendance_out"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_button"
            android:layout_margin="16dp"
            android:text="@string/out_attendance"/>

        <Button
            android:id="@+id/btn_history_attendance"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_button"
            android:layout_margin="16dp"
            android:text="@string/history_attendance"/>
    </LinearLayout>

</LinearLayout>